石湾2号机实现主界面所有tab分页